examples: Resurrect domsuspend example
This partially reverts 5eb4b04211 and 62774afb6ba8.

Rewrite the domsuspend example from scratch. This time do it right.

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,8 +21,8 @@ GENHTML = genhtml
 
 SUBDIRS = . gnulib/lib include src daemon tools docs gnulib/tests \
   tests po examples/object-events examples/hellolibvirt \
-  examples/dominfo examples/apparmor examples/xml/nwfilter \
-  examples/openauth examples/systemtap
+  examples/dominfo examples/domsuspend examples/apparmor \
+  examples/xml/nwfilter examples/openauth examples/systemtap
 
 ACLOCAL_AMFLAGS = -I m4
 
