--- a/configure.ac
+++ b/configure.ac
@@ -2555,6 +2555,7 @@ AC_CONFIG_FILES([\
         tests/Makefile \
         examples/apparmor/Makefile \
         examples/object-events/Makefile \
+        examples/domsuspend/Makefile \
         examples/dominfo/Makefile \
         examples/openauth/Makefile \
         examples/hellolibvirt/Makefile \
