--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@
 /docs/todo.html.in
 /examples/object-events/event-test
 /examples/dominfo/info1
+/examples/domsuspend/suspend
 /examples/hellolibvirt/hellolibvirt
 /examples/openauth/openauth
 /gnulib/lib/*
