Remove redefinition of bool type when --enable-test-locking
Old versions of CIL did not understand the 'bool' data type,
but at least 1.7.3 does now cope. We can remove the old hack
which redefined bool and no longer compiles successfully.

Signed-off-by: Daniel P. Berrange <berrange@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -2129,7 +2129,7 @@ AC_ARG_ENABLE([test-locking],
 enable_locking=$enableval
 
 if test "$enable_locking" = "yes"; then
-  LOCK_CHECKING_CFLAGS="-Dbool=char -D_Bool=char -save-temps"
+  LOCK_CHECKING_CFLAGS="-save-temps"
   AC_SUBST([LOCK_CHECKING_CFLAGS])
 fi
 AM_CONDITIONAL([WITH_CIL],[test "$enable_locking" = "yes"])
