--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -660,7 +660,9 @@ VBOX_DRIVER_SOURCES =						\
 	vbox/vbox_V4_0.c vbox/vbox_CAPI_v4_0.h			\
 	vbox/vbox_V4_1.c vbox/vbox_CAPI_v4_1.h			\
 	vbox/vbox_V4_2.c vbox/vbox_CAPI_v4_2.h			\
-	vbox/vbox_V4_3.c vbox/vbox_CAPI_v4_3.h
+	vbox/vbox_V4_2_20.c vbox/vbox_CAPI_v4_2_20.h			\
+	vbox/vbox_V4_3.c vbox/vbox_CAPI_v4_3.h			\
+	vbox/vbox_V4_3_4.c vbox/vbox_CAPI_v4_3_4.h
 
 VBOX_DRIVER_EXTRA_DIST =					\
 		vbox/vbox_tmpl.c vbox/README			\
