--- a/Makefile.am
+++ b/Makefile.am
@@ -22,7 +22,8 @@ GENHTML = genhtml
 SUBDIRS = . gnulib/lib include src daemon tools docs gnulib/tests \
   tests po examples/object-events examples/hellolibvirt \
   examples/dominfo examples/domsuspend examples/apparmor \
-  examples/xml/nwfilter examples/openauth examples/systemtap
+  examples/xml/nwfilter examples/openauth examples/systemtap \
+  tools/wireshark
 
 ACLOCAL_AMFLAGS = -I m4
 
