--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -2148,6 +2148,14 @@ exit 0
 %doc examples/systemtap
 
 %changelog
+* Thu Jan 16 2014 Daniel Veillard <veillard@redhat.com> - 1.2.1-1
+- Fix s CVE-2014-0028 event: filter global events by domain:getattr ACL
+- Fix CVE-2014-1447 Don't crash if a connection closes early
+- Fix CVE-2013-6458-1 qemu: Do not access stale data in virDomainBlockStats
+- Fix CVE-2013-6457 libxl: avoid crashing if calling `virsh numatune' on inactive domain
+- Fix CVE-2013-6436: fix crash in lxcDomainGetMemoryParameters
+- many doc and bug fixes and improvements
+
 * Mon Dec  2 2013 Daniel Veillard <veillard@redhat.com> - 1.2.0-1
 - Separation of python binding as libvirt-python srpm
 - Add support for gluster pool
