--- a/AUTHORS.in
+++ b/AUTHORS.in
@@ -34,6 +34,7 @@ Martin Kletzander <mkletzan@redhat.com>
 Matthias Bolte <matthias.bolte@googlemail.com>
 Michal Prívozník <mprivozn@redhat.com>
 Osier Yang <jyang@redhat.com>
+Pavel Hrdina <phrdina@redhat.com>
 Peter Krempa <pkrempa@redhat.com>
 Richard W.M. Jones <rjones@redhat.com>
 Stefan Berger <stefanb@us.ibm.com>
