--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -2117,6 +2117,9 @@ fi
 %endif
 
 %changelog
+* Thu Jan 16 2014 Cole Robinson <crobinso@redhat.com> - 1.1.3.3-1
+- Maintenance release 1.1.3.3
+
 * Sat Dec 14 2013 Cole Robinson <crobinso@redhat.com> - 1.1.3.2-1
 - Maintenance release 1.1.3.2
 
