Honour prefix in wireshark install dir
Trying to run

  $ ./configure --prefix=$HOME/usr/libvirt-git
  $ make install

results in libvirt trying to install in /usr/lib/wireshark/plugins/....
with predictable amounts of fail. The configure script should not be
hardcoding /usr/lib by default but rather honour $libdir

Signed-off-by: Daniel P. Berrange <berrange@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -2566,7 +2566,7 @@ AC_ARG_WITH([ws-plugindir],
 
 if test "$with_wireshark_dissector" != "no" && test -z "$ws_plugindir"; then
     ws_version=`$WIRESHARK -v | head -1 | cut -f 2 -d' '`
-    ws_plugindir=`dirname $WIRESHARK`/../lib/wireshark/plugins/$ws_version
+    ws_plugindir="$libdir/wireshark/plugins/$ws_version"
 fi
 AC_SUBST([ws_plugindir])
 
