qemu: hyperv: Add support for timer enlightenments
Add a new <timer> for the HyperV reference time counter enlightenment
and the iTSC reference page for Windows guests.

This feature provides a paravirtual approach to track timer events for
the guest (similar to kvmclock) with the option to use real hardware
clock on systems with a iTSC with compensation across various hosts.

--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -1367,7 +1367,13 @@
             being modified, and can be one of
             "platform" (currently unsupported),
             "hpet" (libxl, xen, qemu), "kvmclock" (qemu),
-            "pit" (qemu), "rtc" (qemu), or "tsc" (libxl).
+            "pit" (qemu), "rtc" (qemu), "tsc" (libxl) or "hypervclock"
+            (qemu - <span class="since">since 1.2.2</span>).
+
+            The <code>hypervclock</code> timer adds support for the
+            reference time counter and the reference page for iTSC
+            feature for guests running the Microsoft Windows
+            operating system.
           </dd>
           <dt><code>track</code></dt>
           <dd>
