--- a/tools/wireshark/src/Makefile.am
+++ b/tools/wireshark/src/Makefile.am
@@ -17,6 +17,9 @@
 # <http://www.gnu.org/licenses/>.
 #
 # Author: Yuto KAWAMURA(kawamuray)
+
+INCLUDES = -I$(top_srcdir)
+
 ws_plugin_LTLIBRARIES     = libvirt.la
 libvirt_la_SOURCES        = packet-libvirt.c plugin.c
 libvirt_la_CPPFLAGS       = $(WS_DISSECTOR_CPPFLAGS)
